--- a/src/wordsearch.scss
+++ b/src/wordsearch.scss
@@ -1,16 +1,14 @@
 /*!*
- * FILE:     mywsb.css
+ * FILE:     wordsearch.css
  * VERSION:  2017-02-13
  * AUTHOR:   Weston Littrell
  */
 /**
- * A refactor of legacy WORDsearch CSS for myWSB EPUBs, mywsb.css
- * is (mostly) written to this standard: http://cssguidelin.es/
- * but with EPUB-specific uses cases in mind.
+ * A refactor of legacy WORDsearch CSS, based on mywsb.css,
+ * written (mostly) to this standard: http://cssguidelin.es/.
  *
- * mywsb.css acts as the default stylesheet for all EPUBs developed
- * by the B&H Direct eBook Development team and can be tweaked or
- * extended with a separate stylesheet.
+ * wordsearch.css acts as the default stylesheet for all CROSS files
+ * converted from EPUB by the B&H Direct eBook Development team.
  *
  * This version is a developer document and should be concatenated
  * and minified for production environments.
@@ -24,13 +22,10 @@
   #CONTENTS
 \*------------------------------------*/
 /**
- * EPUB-NAMESPACE.......Add the EPUB namespace.
  * GLOBAL...............Globally-available variables.
  *
- * FONTS................Add font-families.
  * MAIN.................Set up our document defaults.
- * EPUB-SECTIONS........Epub section styling.
- * EPUB-NAVIGATION......Epub navigation document styling.
+ * TITLE-PAGE...........Title page styles.
  * HEADINGS.............h1–h6 and other headings styles.
  * INLINE-ELEMENTS......HTML inline element styles.
  *
@@ -55,35 +50,15 @@
 
 
 /*------------------------------------*\
- #EPUB-NAMESPACE
-\*------------------------------------*/
-
-@namespace epub "http://www.idpf.org/2007/ops";
-
-
-
-
-
-/*------------------------------------*\
  #GLOBAL
 \*------------------------------------*/
 
-$def-line: 1.55em;
-$def-font: 1.05em;
-$def-ind:  1.5em;
-$serif-font: "Alegreya", "Gentium Plus", serif;
-$sans-font:  "Alegreya Sans", sans-serif;
-$lang-font:  "Gentium Plus", serif;
-
-
-
-
-
-/*------------------------------------*\
-  #FONTS
-\*------------------------------------*/
-
-@import "includes/mywsb/fonts";
+$def-line: 1.5em;
+$def-font: 1em;
+$def-ind:  2em;
+$serif-font: "Georgia", "Times New Roman", serif;
+$sans-font:  "Verdana", "Arial", "Helvetica", sans-serif;
+$lang-font:  "Gentium Plus", "Gentium", "Charis SIL", serif;
 
 
 
@@ -96,8 +71,7 @@ $lang-font:  "Gentium Plus", serif;
 @import "includes/shared/main";
 
 img {
-  border-style: none;
-  width: 100%;
+  max-width: 100%;
 }
 
 
@@ -105,20 +79,10 @@ img {
 
 
 /*------------------------------------*\
-  #EPUB-SECTIONS
+  #TITLE-PAGE
 \*------------------------------------*/
 
-@include "includes/mywsb/sections";
-
-
-
-
-
-/*------------------------------------*\
-  #EPUB-NAVIGATION
-\*------------------------------------*/
-
-@include "includes/mywsb/nav";
+@import "includes/ws/titlepage";
 
 
 
@@ -128,59 +92,46 @@ img {
   #HEADINGS
 \*------------------------------------*/
 
-$h1-margin: 1.5em 0 0.75em 0;
-$h2-margin: 1.3em 0 0.7em 0;
-$lower-level-margin: 1.3em 0 0.5em 0;
-$subheading-margin: -0.4em 0 0.5em 0;
+$h1-margin: 1em 0;
+$h2-margin: 1em 0 0.5em 0;
+$lower-level-margin: $h2-margin;
+$subheading-margin: -0.3em 0 0.5em 0;
 $bridgehead-margin:  0 0 0.75em 0;
 $subheading-color: #4c4e4f;
 
-$level-1-font: normal 500 1.5em $sans-font;
-$level-2-font: normal 500 1.3em $sans-font;
-$level-3-font: normal 500 1.2em $sans-font;
-$level-4-font: italic 500 1.1em $sans-font;
-$level-5-font: normal bold 1em $sans-font;
+$level-1-font: normal bold 1.3em $sans-font;
+$level-2-font: normal bold 1.15em $sans-font;
+$level-3-font: normal bold 1.1em $sans-font;
+$level-4-font: italic bold 1em $sans-font;
+$level-5-font: normal bold 0.95em $sans-font;
 $level-6-font: italic bold 0.9em $sans-font;
 
 @include "includes/shared/headings";
 
 
-/*
- * Label and Ordinal classes for use with <span> in <h1>
+/**
+ * .bridgehead for use with <p>
  */
 
-/* Use for "Chapter X" or "Part X" */
-.label {
-  display: block;
-  color: #808285;
-  font-variant: small-caps;
-  font-weight: 300;
-  font-size: 1.3em;
-  margin: 1em 0 0.5em 0;
-}
-
-/* Use for just numbers */
-.ordinal {
-  font-size: 1.35em;
-  font-style: italic;
-  font-weight: 300;
-  padding: 0 0.25em 0 0;
-
-  &::after {
-    content: ".";
-  }
+.bridgehead {
+  @include bridgehead(); //from shared/headings
 }
 
 
-/*
- * epub:type=bridgehead for use with <p>
+/**
+ * Part title, for use with <p>
  */
 
-p {
-  &[epub|type~=bridgehead],
-  &[epub\:type~=bridgehead] {
-    @include bridgehead(); //from shared/headings
-  }
+.part {
+	background: #333;
+	color: #fff;
+	font-size: 1.5em;
+	font-weight: bold;
+	letter-spacing: 0.2em;
+	margin: -1em -5.5% 1em -5.5%;
+	padding: 1.4em 0 1em 0;
+	text-align: center;
+	text-indent: 0;
 }
 
 
@@ -191,7 +142,20 @@ p {
   #INLINE-ELEMENTS
 \*------------------------------------*/
 
+/**
+ * Not all inline elements from mywsb.css translate to inline
+ * elements in CROSS, but they remain here for consistency.
+ */
+
 @include "includes/shared/inline";
+
+.dictterm {
+  @include dictionary-term();
+}
+
+.esstrongs {
+  @include strongs();
+}
 
 
 
@@ -204,22 +168,8 @@ p {
 @include "includes/shared/asides";
 
 aside {
-  &[epub|type~=bridgehead],
-  &[epub\:type~=bridgehead] {
+  .bridgehead {
     @include aside-bridge();
-  }
-
-  &[epub|type~=footnote],
-  &[epub\:type~=footnote] {
-    border: 0;
-    line-height: $def-line;
-    margin: 0 0 0 1.5em;
-    padding: 0.25em 0;
-    text-indent: -1em;
-
-    sup {
-      font-weight: bold;
-    }
   }
 }
 
@@ -233,11 +183,11 @@ aside {
 
 @include "includes/shared/figures";
 
-figure {
+.figure {
   @include figure-decs();
 }
 
-figcaption {
+.figcaption {
   @include figcap-decs();
 }
 
@@ -250,18 +200,17 @@ figcaption {
 \*------------------------------------*/
 
 @mixin list-layout() {
-  margin: 0.7em 0 1em 0;
-  padding: 0 0 0 calc(1em + 7%);
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 @include "includes/shared/lists";
 
-@include list-items(1.05em, 1.5em, 0.1em 0 0 0);
-@include none-list-items(1em, -1.5em);
+@include list-items(1em, 1.5em, 0.2em 0);
+@include none-list-items(2em, -1em);
 
 @include "includes/shared/list-helpers";
 @include "includes/shared/def-lists";
-
 
 
 
@@ -272,11 +221,12 @@ figcaption {
 
 $offset-color: #d3d3d3;
 
+
 /*
  * Table container
  */
 
-div[data-cross-tour*=table] {
+.container {
   overflow: auto;
 }
 
@@ -306,6 +256,10 @@ td {
   vertical-align: top;
 }
 
+.center table {
+  margin: 1em auto;
+}
+
 
 
 
@@ -318,11 +272,10 @@ td {
 
 .poster {
   @include video-def();
-  width: 100%;
+  width: 80%;
 }
 
 .video-glyph {
-  background: url("../images/video.svg") (center / contain) no-repeat;
   @include glyph-def();
 }
 
@@ -344,7 +297,7 @@ td {
   #BLOCKS
 \*------------------------------------*/
 
-@include "includes/mywsb/blocks";
+@include "includes/ws/blocks";
 
 
 
@@ -377,7 +330,7 @@ $fn-size: 0.75em;
 \*------------------------------------*/
 
 @include "includes/shared/languages";
-@include "includes/mywsb/lang";
+@include "includes/ws/lang";
 
 
 
@@ -397,4 +350,4 @@ $fn-size: 0.75em;
   #OVERRIDES
 \*------------------------------------*/
 
-@include "includes/shared/widths";
+@include "includes/shared/overrides";
