--- a/src/wordsearch.scss
+++ b/src/wordsearch.scss
@@ -10,8 +10,8 @@
  * wordsearch.css acts as the default stylesheet for all CROSS files
  * converted from EPUB by the B&H Direct eBook Development team.
  *
- * This version is a developer document and should be concatenated
- * and minified for production environments.
+ * This version is a developer document and should be compiled and
+ * minified for production environments.
  */
 
 
