fix override include

--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -403,4 +403,4 @@ $fn-size: 0.75em;
   #OVERRIDES
 \*------------------------------------*/
 
-@import "includes/shared/widths";
+@import "includes/shared/overrides";
