fix full-width margin

--- a/src/includes/shared/_figures.scss
+++ b/src/includes/shared/_figures.scss
@@ -16,7 +16,7 @@
 
 // Mixin also used in media query
 @mixin figure-full() {
-  margin: 1.2em auto;
+  margin: 1.2em 5%;
   max-width: 555px;
   width: 90%;
 }
