add footer style, add headings classes, and tweak wordsearch image styles

--- a/src/includes/mywsb/_blocks.scss
+++ b/src/includes/mywsb/_blocks.scss
@@ -1,4 +1,15 @@
 /**
+ * Footer (for footnotes)
+ */
+
+footer {
+  border-top: 1px solid #cfcfcf;
+  margin: 1.5em 0 0 0;
+  padding: 1em 0 0 0;
+}
+
+
+/**
  * Index terms
  */
 
