--- a/src/includes/shared/_headings.scss
+++ b/src/includes/shared/_headings.scss
@@ -36,31 +36,36 @@ h1 {
   @include heading-center();
 }
 
-h2 {
+h2,
+.h2 {
   font: $level-2-font;
   margin: $h2-margin;
   @include heading-center();
 }
 
-h3 {
+h3,
+.h3 {
   font: $level-3-font;
   margin: $lower-level-margin;
   @include heading-left();
 }
 
-h4 {
+h4,
+.h4 {
   font: $level-4-font;
   margin: $lower-level-margin;
   @include heading-left();
 }
 
-h5 {
+h5,
+.h5 {
   font: $level-5-font;
   margin: $lower-level-margin;
   @include heading-left();
 }
 
-h6 {
+h6,
+.h6 {
   font: $level-6-font;
   margin: $lower-level-margin;
   @include heading-left();
