--- a/src/includes/ws/_blocks.scss
+++ b/src/includes/ws/_blocks.scss
@@ -51,6 +51,16 @@ hr,
 }
 
 /**
+ * Footer (for footnotes)
+ */
+
+.footer {
+  border-top: 1px solid #cfcfcf;
+  margin: 1.5em 0 0 0;
+  padding: 1em 0 0 0;
+}
+
+/**
  * Glossary terms
  */
 
