--- a/src/includes/shared/_overrides.scss
+++ b/src/includes/shared/_overrides.scss
@@ -30,7 +30,11 @@
  * <dfn> font override
  */
 
-dfn span[lang],
-dfn span[trans] {
-  font: inherit;
+dl:not(.abbr-list) {
+  dfn {
+    span[lang],
+    span[trans] {
+      font: inherit;
+    }
+  }
 }
