--- a/src/includes/shared/_tables.scss
+++ b/src/includes/shared/_tables.scss
@@ -28,8 +28,12 @@
 }
 
 /*
- * offset class for use with any <tr>, <th>, or <td> element
+ * for use with any <tr>, <th>, or <td> element
  */
+
+.middle {
+  vertical-align: middle;
+}
 
 .offset {
   background-color: $offset-color;
