fix full-width figure margin

--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -247,6 +247,15 @@ figcaption {
   @include figcap-decs();
 }
 
+.full-width {
+  @include figure-full();
+  margin: $auto-margin;
+
+  img {
+    margin: 0 auto;
+  }
+}
+
 
 
 
