--- a/src/mywsb.scss
+++ b/src/mywsb.scss
@@ -1,6 +1,6 @@
 /*!*
  * FILE:     mywsb.css
- * VERSION:  2017-02-27
+ * VERSION:  2017-03-09
  * AUTHOR:   Weston Littrell
  */
 /**
@@ -291,7 +291,7 @@ $offset-color: #d3d3d3;
  * Table container
  */
 
-div[data-cross-tour*=table] {
+.table {
   overflow: auto;
 }
 
@@ -392,7 +392,6 @@ $fn-size: 0.75em;
 \*------------------------------------*/
 
 @import "includes/shared/languages";
-@import "includes/mywsb/lang";
 
 
 
